# SoundScrapper

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
Docs/: ApiPlan.md  Architecture.md  CodexTasks.md  CurrentTask.md  DecisionLog.md  ErrorLog.md  Goals.md
backend/: __init__.py
backend/app/: __init__.py  config.py  db.py  freesound_client.py  freesound_oauth.py  jamendo_client.py  local_ai_client.py  main.py  openverse_client.py  preview_cache.py  prompt_parser.py  ranker.py  schemas.py  source_identity.py
deploy/duckdns/: README.md
deploy/google/: README.md  setup_ubuntu.sh  soundscrapper.env.example
deploy/oracle/: README.md  nginx.conf  setup_ubuntu.sh  soundscrapper.env.example  soundscrapper.service
frontend/: app.js  index.html  style.css
scripts/: project_digest.py
tests/: test_sound_scout.py
