[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "soundscrapper"
version = "0.1.0"
description = "Local Sound Scout MVP for searching and saving game-ready sound candidates."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["Docs*", "frontend*", "scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
